facet-json2/tests/integration/snapshots/r#mod__integration__err__bad_json_2.snap
---
source: facet-json2/tests/integration/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:2 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m [0m[31m}[0m
 [38;5;240m  │[0m  [31m┬[0m  
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m[31m─[0m Unexpected character: got '[31m}[39m', wanted [33ma value[39m
[38;5;246m───╯[0m
