facet-json2/tests/integration/snapshots/r#mod__integration__err__bad_json_5.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:2:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[31m}[0m
 [38;5;240m  │[0m   [31m┬[0m  
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m[31m─[0m Unexpected token: got [31m}[39m, wanted [32mvalue[39m
[38;5;246m───╯[0m
